- Publicamos la actualizacion de currency
